# dglex

./: CLAUDE.md  GEMINI.md  LICENSE  README.md  dglex.yaml.sample  pyproject.toml
.github/workflows/: test.yml
examples/: dglex_guide.ipynb  visualization.ipynb
src/dglex/: __init__.py  cli.py  info.py  view.py
src/dglex/info/: __init__.py  backends.py  core.py  loaders.py  types.py
src/dglex/view/: __init__.py  config.py  core.py  graph_ops.py  plot.py  style.py  types.py
src/dglex/visualisation/: __init__.py  graph_ops.py  plot.py  style.py  types.py
tests/: pyg_stubs.py  test_cli.py  test_info_api.py
tests/view/: test_plot.py
tests/visualization/: test_plot.py
