[project]
name = "dglex"
version = "0.1.0"
description = "An extention library for DGL"
readme = "README.md"
authors = [
    { name = "masaponto", email = "masaponto@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "seaborn>=0.13.2",
    "numpy>=1.26.4,<2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
dgl = { url = "https://data.dgl.ai/wheels/dgl-1.0.2-cp39-cp39-manylinux1_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "dgl",
    "torch==2.0.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]
