[project]
name = "dglex"
version = "0.1.0"
description = "An extention library for DGL"
readme = "README.md"
authors = [
    { name = "masaponto", email = "masaponto@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "seaborn>=0.13.2",
    "numpy>=1.26.4,<2",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
]
dgl = [
    { url = "https://data.dgl.ai/wheels/torch-2.3/dgl-2.4.0-cp311-cp311-manylinux1_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { url = "https://data.dgl.ai/wheels/dgl-1.0.2-cp311-cp311-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dglex = "dglex.cli:main"

[dependency-groups]
dev = [
    "dgl",
    "torch==2.3.0; sys_platform == 'linux'",
    "torch==2.0.1; sys_platform == 'darwin'",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]
